I4009: image alt overflow issue (#4249)
* I4009: image alt overflow issue
* added comment for future reference

--- a/src/amo/components/SearchSuggestion/styles.scss
+++ b/src/amo/components/SearchSuggestion/styles.scss
@@ -19,6 +19,9 @@
   @include margin-end(12px);
 
   height: 16px;
+  // To handle 404 images, image width is very small so alt text distorts UI
+  // https://github.com/mozilla/addons-frontend/issues/4009
+  overflow: hidden;
   width: 16px;
 }
 
